# scip-cli

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SKILL.md  pyproject.toml  setup.py
.cursor/rules/: agent.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: port.md  review-findings.md
docs/ports/: conclusions.md  experiment-summary.md  go-experiment.md  go.md  plan.md  rust-experiment.md  rust.md  summary.md  zig-experiment.md  zig.md
scip_cli/: SKILL.md  __init__.py  __main__.py  cache.py  cli_args.py  config.py  constants.py  debug.py  discover.py  indexing.py  lib.py  merge.py  output.py  paths.py  project.py  queries.py  scip_tool.py  scope.py  session.py  source.py  sql.py  symbols.py  targets.py
scip_cli/analyze/: __init__.py  common.py  file.py  graph.py  live.py  project.py  sections.py  symbol.py  targets.py
scip_cli/commands/: __init__.py  analyze.py  code.py  def_cmd.py  deps.py  members.py  rdeps.py  refs.py  reindex.py  search.py  skill.py  symbols.py
scip_cli/indexing/: __init__.py  constants.py  convert.py  core.py  languages.py  orchestrate.py  postprocess.py  runners.py  typescript.py
scripts/: bench.sh  bench_postprocess.py  build.sh  publish.sh  test.sh
tests/: analyze_db.py  bench_db.py  conftest.py  e2e_harness.py  fixture_catalog.py  perf_util.py  test_analyze.py  test_analyze_graph.py  test_analyze_perf.py  test_bench_queries.py  test_cache.py  test_composability.py  test_config.py  test_discover.py  test_e2e.py  test_e2e_analyze_patterns.py  test_e2e_perf.py  test_index_batching.py  test_index_prune.py  test_indexer_env.py  test_indexer_fallback.py  test_merge.py  test_multi_symbol.py  test_pure_functions.py  test_python_index_integration.py  test_qualified_symbols.py  test_reindex.py  test_scip_tool.py  test_scope.py  test_smoke_cli.py  test_symbols_freq.py  test_targets.py  test_typescript_projects.py
tests/fixtures/sample-project/src/: consumer.ts  index.ts
tests/fixtures/sample-project/src/app/: handler.ts
tests/fixtures/sample-project/src/domain/i18n/: en.ts  index.ts  useLocale.ts
tests/fixtures/sample-project/src/domain/labels/: index.ts
tests/fixtures/sample-project/src/hooks/: useHookB.ts
tests/fixtures/sample-project/src/integrations/: inferenceClient.ts
tests/fixtures/sample-project/src/loaders/: useInference.ts
tests/fixtures/sample-project/src/pages/: panelPage.ts
tests/fixtures/sample-project/src/rules/: applyRule.ts
tests/fixtures/sample-project/src/types/: b.ts
tests/fixtures/sample-project/src/ui/: buttonConsumer.ts
tests/fixtures/sample-project/src/widgets/: OrphanWidget.ts
tests/fixtures/typescript-project/src/: config.ts  consumer.ts  dead.ts  helper.ts  user.ts  widget.ts
tests/fixtures/typescript-project/src/events/: streamTypes.ts
tests/fixtures/typescript-project/src/gateway/: index.ts
tests/fixtures/typescript-project/src/hooks/: useHookA.ts  useItems.ts
tests/fixtures/typescript-project/src/types/: a.ts
tests/fixtures/typescript-project/src/ui/: Button.ts  LazyPanel.ts  menuModule.ts
