[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scip-cli"
dynamic = ["version"]
description = "Fast code intelligence via SCIP indexes"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Ariel Flesler"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/flesler/scip-cli"

[project.scripts]
scip-cli = "scip_cli.__main__:main"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
scip_cli = ["SKILL.md"]

[tool.setuptools.dynamic]
version = {attr = "scip_cli.__version__"}

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "pytest>=7",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PT", "RUF"]
ignore = ["SIM108"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
markers = [
    "integration: indexes the bundled sample project (requires scip-typescript)",
]
