[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scip-cli"
dynamic = ["version"]
description = "Fast code intelligence via SCIP indexes"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Ariel Flesler"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/flesler/scip-cli"

[project.scripts]
scip-cli = "scip_cli.__main__:main"

[tool.hatch.version]
path = "scip_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["scip_cli"]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "basedpyright>=1.39.9",
    "pytest>=7",
    "pre-commit>=4.0",
    "build>=1",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PT", "RUF"]
ignore = ["SIM108"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=line --no-header"
markers = [
    "integration: uses the shared indexed TS fixture (requires npx / scip-typescript)",
]

[tool.basedpyright]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
include = ["scip_cli"]
exclude = ["tests"]

# Gradual typing: basedpyright's unknown* rules fire hundreds of times on CLI/SQL glue
# pythonVersion=3.10 matches union syntax in annotations; package still supports 3.9 via __future__ annotations
reportAny = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportMissingParameterType = "none"
reportUnusedCallResult = "none"

[[tool.basedpyright.executionEnvironments]]
root = "scip_cli/indexing"
reportUnusedFunction = "none"
reportPrivateUsage = "none"
